--- a/index.html
+++ b/index.html
@@ -5,35 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medora Chatbot</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        #chatbox { width: 300px; height: 400px; border: 1px solid #ccc; overflow-y: auto; padding: 10px; margin: auto; }
-        input, button { padding: 10px; margin-top: 10px; width: 80%; }
+        body { 
+            font-family: Arial, sans-serif; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background-color: #f4f4f4; 
+            margin: 0;
+        }
+        .chat-container {
+            width: 350px;
+            background: white;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .chat-header {
+            background: #007bff;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+        }
+        #chatbox {
+            height: 400px;
+            overflow-y: auto;
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+            background: #fafafa;
+        }
+        .input-container {
+            display: flex;
+            padding: 10px;
+        }
+        input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px 15px;
+            margin-left: 5px;
+            border: none;
+            background: #007bff;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .open-chat-btn {
+            margin-top: 20px;
+            padding: 10px 15px;
+            background: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
-    <h2>Medora Chatbot</h2>
-    <div id="chatbox"></div>
-    <input type="text" id="userInput" placeholder="Type your message..." />
-    <button onclick="sendMessage()">Send</button>
-
+    <div class="chat-container">
+        <div class="chat-header">Medora Chatbot</div>
+        <div id="chatbox"></div>
+        <div class="input-container">
+            <input type="text" id="userInput" placeholder="Type your message...">
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+    
+    <button class="open-chat-btn" onclick="openChat()">Open Chat</button>
+    
     <script>
+        function openChat() {
+            window.open('chat.html', '_blank', 'width=400,height=500');
+        }
+
         async function sendMessage() {
             let input = document.getElementById("userInput").value;
             if (!input) return;
 
             let chatbox = document.getElementById("chatbox");
             chatbox.innerHTML += `<p><strong>You:</strong> ${input}</p>`;
-
             document.getElementById("userInput").value = "";
 
             try {
                 let response = await fetch("https://medorachatbot.app.n8n.cloud/webhook-test/3a35f951-2e6a-4f3a-9452-0cd5f975b5db", {
                     method: "POST",
-                    headers: { 
-                        "Content-Type": "application/json"
-                    },
-                    mode: "cors", // Enable CORS
+                    headers: { "Content-Type": "application/json" },
+                    mode: "cors",
                     body: JSON.stringify({ query: input })
                 });
 
@@ -43,7 +105,6 @@
 
                 let data = await response.json();
                 chatbox.innerHTML += `<p><strong>Medora:</strong> ${data.reply}</p>`;
-
             } catch (error) {
                 console.error("Error fetching response:", error);
                 chatbox.innerHTML += `<p><strong>Medora:</strong> Sorry, there was an issue processing your request.</p>`;
