--- a/chat.html
+++ b/chat.html
@@ -6,10 +6,45 @@
     <title>Medora Chat</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        iframe { width: 100%; height: 100vh; border: none; }
+        #chat-box { width: 100%; height: 300px; border: 1px solid #ccc; overflow-y: scroll; padding: 10px; margin-bottom: 10px; }
+        #user-input { width: 80%; padding: 10px; }
+        #send-btn { padding: 10px; cursor: pointer; }
     </style>
 </head>
 <body>
-    <iframe src="https://medorachatbot.app.n8n.cloud/chat/d840deb54a2649ebac42a620c11379ad"></iframe>
+
+    <h2>Medora Chat</h2>
+    <div id="chat-box"></div>
+    <input type="text" id="user-input" placeholder="Type a message..." />
+    <button id="send-btn">Send</button>
+
+    <script>
+        const webhookUrl = "https://medorachatbot.app.n8n.cloud/webhook-test/4cbdf5a8-8d4d-4b16-944a-500206dd3a0c";
+
+        document.getElementById("send-btn").addEventListener("click", async () => {
+            let userMessage = document.getElementById("user-input").value;
+            if (!userMessage.trim()) return;
+
+            let chatBox = document.getElementById("chat-box");
+            chatBox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            document.getElementById("user-input").value = "";
+
+            try {
+                let response = await fetch(webhookUrl, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ query: userMessage })
+                });
+
+                let data = await response.json();
+                chatBox.innerHTML += `<p><strong>Medora:</strong> ${data}</p>`;
+                chatBox.scrollTop = chatBox.scrollHeight;
+            } catch (error) {
+                chatBox.innerHTML += `<p style="color:red;">Error connecting to chatbot</p>`;
+            }
+        });
+    </script>
+
 </body>
 </html>
+
