--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 
     <script>
     function openChat() {
-        window.open('https://medorachatbot.app.n8n.cloud/chat/d840deb54a2649ebac42a620c11379ad', '_blank', 'width=400,height=500');
+        window.open('chat.html', '_blank', 'width=400,height=500');
     }
     </script>
-
-
 </body>
 </html>
