--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,7 @@
     <button id="send-btn">Send</button>
 
     <script>
-        const webhookUrl = "https://medorachatbot.app.n8n.cloud/webhook-test/4cbdf5a8-8d4d-4b16-944a-500206dd3a0c";
+        const webhookUrl = "https://your-backend-url.com/webhook";
 
         document.getElementById("send-btn").addEventListener("click", async () => {
             let userMessage = document.getElementById("user-input").value;
